No text wrapping

--- a/wasm/static_web/index.html
+++ b/wasm/static_web/index.html
@@ -17,6 +17,8 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  white-space: nowrap;
+  overflow: hidden;
 }
 #app_node {
     padding: 0px;
