--- a/wasm/static_web/index.html
+++ b/wasm/static_web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CHERENKOV</title>
+    <title>Get Well Soon</title>
     <style>
 body {
     overflow: hidden;
